Fixed formatting for get_issue_text, etc. Going to edit those 3 functions to output properly formatted json data now

--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,7 @@ cython_debug/
 #.idea/
 
 public.env
+
+# output of download_new_subscribers
+# holds all subscriber data (email, GitHub link)
+subscribers.json
