--- a/.gitignore
+++ b/.gitignore
@@ -160,6 +160,7 @@ cython_debug/
 #.idea/
 
 public.env
+.env
 
 # output of download_new_subscribers
 # holds all subscriber data (email, GitHub link)
