--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ distlib==0.3.9
 distro==1.9.0
 dominate==2.9.1
 dulwich==0.21.7
+et_xmlfile==2.0.0
 executing==2.1.0
 fastjsonschema==2.20.0
 filelock==3.16.1
@@ -40,9 +41,10 @@ h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
 idna==3.10
+iniconfig==2.1.0
 installer==0.7.0
 ipykernel==6.29.5
-ipython==8.28.0
+ipython==8.18.0
 itsdangerous==2.2.0
 jaraco.classes==3.4.0
 jedi==0.19.1
@@ -69,18 +71,24 @@ more-itertools==10.5.0
 msgpack==1.1.0
 multidict==6.1.0
 mypy-extensions==1.0.0
+mysql==0.0.3
+mysql-connector-python==9.1.0
+mysqlclient==2.2.6
 nbclient==0.10.0
 nbformat==5.10.4
 nest-asyncio==1.6.0
 numpy==1.26.4
 openai==1.51.2
+openpyxl==3.1.5
 orjson==3.10.7
 packaging==24.1
 pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
+pillow==11.2.1
 pkginfo==1.11.2
 platformdirs==4.3.6
+pluggy==1.5.0
 poetry==1.8.4
 poetry-core==1.9.1
 poetry-plugin-export==1.8.0
@@ -95,12 +103,16 @@ pydantic==2.9.2
 pydantic-settings==2.5.2
 pydantic_core==2.23.4
 pydirectory==0.1.15
+pyfiglet==1.0.2
 PyGithub==2.4.0
 Pygments==2.18.0
 PyJWT==2.9.0
 PyMySQL==1.1.1
 PyNaCl==1.5.0
+PyPDF2==3.0.1
 pyproject_hooks==1.2.0
+pytest==8.3.5
+pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
@@ -113,6 +125,7 @@ referencing==0.35.1
 regex==2024.9.11
 requests==2.32.3
 requests-toolbelt==1.0.0
+responses==0.25.7
 rpds-py==0.20.0
 shellingham==1.5.4
 six==1.16.0
@@ -138,4 +151,5 @@ wcwidth==0.2.13
 Werkzeug==3.0.6
 wrapt==1.16.0
 WTForms==3.2.1
+XlsxWriter==3.2.0
 yarl==1.14.0
